# cmd/thv-operator/api/v1beta1/zz_generated.deepcopy.go
@@ -1653,11 +1653,6 @@ func (in *MCPServerSpec) DeepCopyInto(out *MCPServerSpec) {
 		*out = new(v1.Duration)
 		**out = **in
 	}
-	if in.ProxyWriteTimeout != nil {
-		in, out := &in.ProxyWriteTimeout, &out.ProxyWriteTimeout
-		*out = new(v1.Duration)
-		**out = **in
-	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new MCPServerSpec.
